změna názvu, adresy

--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: Můj projekt číslo jedna
-baseURL: https://xyz.netlify.com/
+baseURL: https://sleepy-galileo-da6c30.netlify.com/
 languageCode: cs-cz
 publishDir: public
 
