--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: Můj projekt číslo jedna
+title: Cestování po stopách hrdinů knih
 baseURL: https://sleepy-galileo-da6c30.netlify.com/
 languageCode: cs-cz
 publishDir: public
