--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: Cestování po stopách hrdinů knih
+title: Low Cost Cestování
 baseURL: https://sleepy-galileo-da6c30.netlify.com/
 languageCode: cs-cz
 publishDir: public
